language/move-lang/tests/move_check/naming/unbound_module.move
module M {
    use 0x0::X as X;
    fun foo() {
        X::foo();
    }
}
